Fix background image not showing up in heroku

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -4,7 +4,7 @@
 }
 
 .background-image {
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5) 10%, rgba(200, 200, 200, 0.3) 59%, rgba(0, 0, 0, 0.65) 100%) no-repeat center center fixed, url(stairs-opt.jpg) no-repeat center center fixed;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5) 10%, rgba(200, 200, 200, 0.3) 59%, rgba(0, 0, 0, 0.65) 100%) no-repeat center center fixed, url('stairs-opt.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
